update font awesome version to 5.15 to use ruler icon

--- a/localinfo/templates/localinfo/faq.html
+++ b/localinfo/templates/localinfo/faq.html
@@ -121,7 +121,7 @@
                     <input type="text" placeholder="Buscar" name="search"
                     value = "{{ query |safe }}"
                     >
-                    <button type="submit"><i class="fa fa-search"></i></button>
+                    <button type="submit"><i class="fas fa-search"></i></button>
                 </form>
             </div>
         </div>
@@ -136,23 +136,23 @@
                         <li><a style="--cd-color-2: #7F8F9F" class="cd-faq__category cd-faq__category-selected truncate"
                                href="#{{ key }}">
                             {% if key == "speed" %}
-                                <i class="fa fa-tachometer"></i>
+                                <i class="fas fa-tachometer-alt"></i>
                             {% elif key == 'route' %}
-                                <i class="fa fa-map"></i>
+                                <i class="fas fa-map"></i>
                             {% elif key == 'trip' %}
-                                <i class="fa fa-line-chart"></i>
+                                <i class="fas fa-line-chart"></i>
                             {% elif key == 'profile' %}
-                                <i class="fa fa-bus"></i>
+                                <i class="fas fa-bus-alt"></i>
                             {% elif key == 'paymentfactor' %}
-                                <i class="fa fa-dollar"></i>
+                                <i class="fas fa-dollar-sign"></i>
                             {% elif key == 'administration' %}
-                                <i class="fa fa-users"></i>
+                                <i class="fas fa-users"></i>
                             {% elif key == 'storage' %}
-                                <i class="fa fa-cloud-download"></i>
+                                <i class="fas fa-cloud-download-alt"></i>
                             {% elif key == 'global' %}
-                                <i class="fa fa-clone"></i>
+                                <i class="fas fa-chart-line"></i>
                             {% elif key == 'general' %}
-                                <i class="fa fa-question-circle-o"></i>
+                                <i class="fas fa-question-circle"></i>
                             {% endif %}
                             &ensp;{{ values.0.get_category_display }}
                         </a></li>
@@ -160,23 +160,23 @@
                         <li><a style="--cd-color-2: #7F8F9F" class="cd-faq__category truncate"
                                href="#{{ key }}">
                             {% if key == "speed" %}
-                                <i class="fa fa-tachometer"></i>
+                                <i class="fas fa-tachometer-alt"></i>
                             {% elif key == 'route' %}
-                                <i class="fa fa-map"></i>
+                                <i class="fas fa-map"></i>
                             {% elif key == 'trip' %}
-                                <i class="fa fa-line-chart"></i>
+                                <i class="fas fa-suitcase-rolling"></i>
                             {% elif key == 'profile' %}
-                                <i class="fa fa-bus"></i>
+                                <i class="fas fa-bus-alt"></i>
                             {% elif key == 'paymentfactor' %}
-                                <i class="fa fa-dollar"></i>
+                                <i class="fas fa-dollar-sign"></i>
                             {% elif key == 'administration' %}
-                                <i class="fa fa-users"></i>
+                                <i class="fas fa-users"></i>
                             {% elif key == 'storage' %}
-                                <i class="fa fa-cloud-download"></i>
+                                <i class="fas fa-cloud-download-alt"></i>
                             {% elif key == 'global' %}
-                                <i class="fa fa-clone"></i>
+                                <i class="fas fa-chart-line"></i>
                             {% elif key == 'general' %}
-                                <i class="fa fa-question-circle-o"></i>
+                                <i class="fas fa-question-circle"></i>
                             {% endif %}
                             &ensp;{{ values.0.get_category_display }}
                         </a></li>
@@ -190,23 +190,23 @@
                         <li class="cd-faq__title">
                             <h2>
                                 {% if key == "speed" %}
-                                    <i class="fa fa-tachometer"></i>
+                                    <i class="fas fa-tachometer-alt"></i>
                                 {% elif key == 'route' %}
-                                    <i class="fa fa-map"></i>
+                                    <i class="fas fa-map"></i>
                                 {% elif key == 'trip' %}
-                                    <i class="fa fa-line-chart"></i>
+                                    <i class="fas fa-suitcase-rolling"></i>
                                 {% elif key == 'profile' %}
-                                    <i class="fa fa-bus"></i>
+                                    <i class="fas fa-bus-alt"></i>
                                 {% elif key == 'paymentfactor' %}
-                                    <i class="fa fa-dollar"></i>
+                                    <i class="fas fa-dollar-sign"></i>
                                 {% elif key == 'administration' %}
-                                    <i class="fa fa-users"></i>
+                                    <i class="fas fa-users"></i>
                                 {% elif key == 'storage' %}
-                                    <i class="fa fa-cloud-download"></i>
+                                    <i class="fas fa-cloud-download-alt"></i>
                                 {% elif key == 'global' %}
-                                    <i class="fa fa-clone"></i>
+                                    <i class="fas fa-chart-line"></i>
                                 {% elif key == 'general' %}
-                                    <i class="fa fa-question-circle-o"></i>
+                                    <i class="fas fa-question-circle"></i>
                                 {% endif %}
                                 {{ values.0.get_category_display }}
                             </h2></li>
