--- a/paymentfactor/templates/paymentfactor/index.html
+++ b/paymentfactor/templates/paymentfactor/index.html
@@ -25,7 +25,7 @@
 
     <div class="row">
         {% table "validationDetail" 12 with_checker=False as validationTable %}
-        {% panel "fa-money" 'Transacciones' validationTable info_target_id="tableHelp" as panel5 %}
+        {% panel "fa-dollar-sign" 'Transacciones' validationTable info_target_id="tableHelp" as panel5 %}
         {% columns 12 12 12 panel5 %}
     </div>
 
