--- a/profile/templates/profile/byExpedition.html
+++ b/profile/templates/profile/byExpedition.html
@@ -23,7 +23,7 @@
 
     <div class="row">
         {% tabs tabs.header tabs.content as profile_tabs %}
-        {% panel "fa-bar-chart" "Perfil de carga" profile_tabs info_target_id="chartHelp" as panel4 %}
+        {% panel "fa-chart-bar" "Perfil de carga" profile_tabs info_target_id="chartHelp" as panel4 %}
         {% columns 12 12 12 panel4 %}
     </div>
 
