--- a/profile/templates/profile/byManyStops.html
+++ b/profile/templates/profile/byManyStops.html
@@ -14,7 +14,7 @@
 
     <div class="row">
 
-        {% panel "fa-bar-chart" "Subidas y bajadas" '<div id="barChart" style="height:400px;"></div>' info_target_id="chartHelp" as panel4 %}
+        {% panel "fa-chart-bar" "Subidas y bajadas" '<div id="barChart" style="height:400px;"></div>' info_target_id="chartHelp" as panel4 %}
         {% columns 12 12 12 panel4 %}
 
     </div>
