--- a/profile/templates/profile/byStop.html
+++ b/profile/templates/profile/byStop.html
@@ -14,7 +14,7 @@
 
     <div class="row">
 
-        {% panel "fa-bar-chart" "Perfil de carga <small>para <strong id='expeditionNumber'>N</strong> expediciones</small>" '<div id="barChart" style="height:400px;"></div>' info_target_id="chartHelp" as panel4 %}
+        {% panel "fa-chart-bar" "Perfil de carga <small>para <strong id='expeditionNumber'>N</strong> expediciones</small>" '<div id="barChart" style="height:400px;"></div>' info_target_id="chartHelp" as panel4 %}
         {% columns 12 12 12 panel4 %}
     </div>
 
