--- a/templates/admin/auth/user/change_password.html
+++ b/templates/admin/auth/user/change_password.html
@@ -36,7 +36,7 @@
           </p>
         {% endif %}
 
-        <p class="alert alert-info"><i class="fa fa-info-circle fa-lg fa-2x"></i> {% blocktrans with username=original %}Enter a new password for the user <strong>{{ username }}</strong>.{% endblocktrans %}</p>
+        <p class="alert alert-info"><i class="fas fa-info-circle fa-lg fa-2x"></i> {% blocktrans with username=original %}Enter a new password for the user <strong>{{ username }}</strong>.{% endblocktrans %}</p>
 
         <fieldset class="module aligned">
 
