--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -58,7 +58,7 @@
                             <br/>
 
                             <div>
-                                <h1><i class="fa fa-dashboard"></i> ADATRAP </h1>
+                                <h1><i class="fas fa-tachometer-alt"></i> ADATRAP </h1>
                                 <p>©2017 todos los derechos reservados.</p>
                             </div>
                         </div>
