--- a/trip/templates/trip/large.html
+++ b/trip/templates/trip/large.html
@@ -30,7 +30,7 @@
             {# Map and selector bar #}
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 {% with panel_body="<div id='mapChart' style='height:500px;'></div>" %}
-                    {% panel "fa-map-o" "<span id='mapTitle'>Mapa con</span> <span id='tripTotalNumberValue'>0</span> <span id='tripTotalNumberLabel'>viajes</span> en <span id='dataTotalNumberValue'>0</span> <span id='dataTotalNumberLabel'>datos</span>" selectors|add:panel_body info_target_id="mapHelp" %}
+                    {% panel "fa-map" "<span id='mapTitle'>Mapa con</span> <span id='tripTotalNumberValue'>0</span> <span id='tripTotalNumberLabel'>viajes</span> en <span id='dataTotalNumberValue'>0</span> <span id='dataTotalNumberLabel'>datos</span>" selectors|add:panel_body info_target_id="mapHelp" %}
                 {% endwith %}
             </div>
         </div>
