--- a/trip/templates/trip/resume.html
+++ b/trip/templates/trip/resume.html
@@ -25,7 +25,7 @@
 
         <div class="row cols-same-height">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                {% panel "fa-bar-chart-o" "Histograma" chart info_target_id="histogramHelp" %}
+                {% panel "fa-chart-bar" "Histograma" chart info_target_id="histogramHelp" %}
             </div>
         </div>
     </div>
