--- a/speed/templates/speed/matrix.html
+++ b/speed/templates/speed/matrix.html
@@ -48,7 +48,7 @@
     <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
             {% with "<div id='main' style='height:400px;'></div>" as chart %}
-                {% panel "fa-tachometer" "Matriz de velocidades: <span id='route_name'></span>" chart info_target_id="chartHelp" %}
+                {% panel "fa-tachometer-alt" "Matriz de velocidades: <span id='route_name'></span>" chart info_target_id="chartHelp" %}
             {% endwith %}
         </div>
     </div>
