--- a/speed/templates/speed/ranking.html
+++ b/speed/templates/speed/ranking.html
@@ -56,7 +56,7 @@
         <div class="row">
             <div class="col-md-8 col-sm-12 col-xs-12">
                 {% with panel_body="<table id='tupleDetail' class='table table-striped table-bordered dt-responsive table-condensed nowrap' width='100%'><thead><tr><th></th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead></table>" %}
-                    {% panel "fa-tachometer" "Ranking de Velocidades <strong id='horario'></strong>" panel_body info_target_id="tableHelp" %}
+                    {% panel "fa-tachometer-alt" "Ranking de Velocidades <strong id='horario'></strong>" panel_body info_target_id="tableHelp" %}
                 {% endwith %}
             </div>
             <div class="col-md-4 col-sm-12 col-xs-12">
