--- a/speed/templates/speed/variation.html
+++ b/speed/templates/speed/variation.html
@@ -25,7 +25,7 @@
         <div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12">
                 {% with panel_body="<div id='main' style='height:200px;'></div>" %}
-                    {% panel "fa-tachometer" "Variación de velocidades" panel_body info_target_id="chartHelp" %}
+                    {% panel "fa-tachometer-alt" "Variación de velocidades" panel_body info_target_id="chartHelp" %}
                 {% endwith %}
             </div>
         </div>
