--- a/templates/admin/auth/user/add_form.html
+++ b/templates/admin/auth/user/add_form.html
@@ -3,8 +3,8 @@
 
 {% block form_top %}
   {% if not is_popup %}
-    <p class="alert alert-info"><i class="fa fa-info-circle fa-lg fa-2x"></i> {% trans "First, enter a username and password. Then, you'll be able to edit more user options." %}</p>
+    <p class="alert alert-info"><i class="fas fa-info-circle fa-lg fa-2x"></i> {% trans "First, enter a username and password. Then, you'll be able to edit more user options." %}</p>
   {% else %}
-    <p class="alert alert-info"><i class="fa fa-info-circle fa-lg fa-2x"></i> {% trans "Enter a username and password." %}</p>
+    <p class="alert alert-info"><i class="fas fa-info-circle fa-lg fa-2x"></i> {% trans "Enter a username and password." %}</p>
   {% endif %}
 {% endblock %}
