--- a/templates/admin/change_list_results.html
+++ b/templates/admin/change_list_results.html
@@ -15,12 +15,12 @@
           {% if header.sort_priority > 0 %}
           <div class="sortoptions navbar-right">
              <a class="sortremove" style="position:relative" href="{{ header.url_remove }}" title="{% trans "Remove from sorting" %}">
-               <i class="fa fa-sort"></i>
+               <i class="fas fa-sort"></i>
              </a>
             {% if num_sorted_fields > 1 %}
               <span class="sortpriority" title="{% blocktrans with priority_number=header.sort_priority %}Sorting priority: {{ priority_number }}{% endblocktrans %}">{{ header.sort_priority }}</span>
             {% endif %}
-            <a href="{{ header.url_toggle }}" title="{% trans "Toggle sorting" %}"><i class="fa {% if header.ascending %}fa-sort-up{% else %}fa-sort-desc{% endif %}"></i></a>
+            <a href="{{ header.url_toggle }}" title="{% trans "Toggle sorting" %}"><i class="fas {% if header.ascending %}fa-sort-up{% else %}fa-sort-down{% endif %}"></i></a>
           </div>
           {% endif %}
         {% endif %}
