--- a/templates/admin/date_range_modal.html
+++ b/templates/admin/date_range_modal.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class="col-md-1 col-sm-1 col-xs-1">
-                <button data-toggle="tooltip" title="Eliminar selección" id="deleteSelection" class="btn btn-danger"><i class="fa fa-trash-o fa-2x"></i></button>
+                <button data-toggle="tooltip" title="Eliminar selección" id="deleteSelection" class="btn btn-danger"><i class="fas fa-trash-alt fa-2x"></i></button>
             </div>
         </div>
         <div class="row">
