--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -23,7 +23,7 @@
     {% csrf_token %}
     <div>
       {% if form.errors %}
-        <div class="alert alert-error"><i class="fa fa-warning fa-lg"></i> 
+        <div class="alert alert-error"><i class="fas fa-exclamation-triangle fa-lg"></i>
         {% if form.errors.items|length == 1 %}
           {% trans "Please correct the error below." %}
         {% else %}
@@ -32,7 +32,7 @@
         </div>
       {% endif %}
 
-      <div class="alert alert-info"><i class="fa fa-info-circle fa-lg"></i> {% trans "Please enter your old password, for security's sake, and then enter your new password twice so we can verify you typed it in correctly." %}</div>
+      <div class="alert alert-info"><i class="fas fa-info-circle fa-lg"></i> {% trans "Please enter your old password, for security's sake, and then enter your new password twice so we can verify you typed it in correctly." %}</div>
 
       <fieldset class="module aligned wide well">
         <div class="form-row">
