--- a/webuser/templates/webuser/password_change.html
+++ b/webuser/templates/webuser/password_change.html
@@ -16,7 +16,7 @@
                     {% csrf_token %}
                     <div>
                         {% if form.errors %}
-                            <div class="alert alert-error"><i class="fa fa-warning fa-lg"></i>
+                            <div class="alert alert-error"><i class="fas exclamation-triangle fa-lg"></i>
                                 {% if form.errors.items|length == 1 %}
                                     {% trans "Please correct the error below." %}
                                 {% else %}
@@ -26,7 +26,7 @@
                         {% endif %}
 
                         <div class="alert alert-info"><i
-                                class="fa fa-info-circle fa-lg"></i> {% trans "Please enter your old password, for security's sake, and then enter your new password twice so we can verify you typed it in correctly." %}
+                                class="fas fa-info-circle fa-lg"></i> {% trans "Please enter your old password, for security's sake, and then enter your new password twice so we can verify you typed it in correctly." %}
                         </div>
 
                         <fieldset class="module aligned wide well">
