refactoring. It was splitted bearing with route legend in two controls

--- a/shape/static/shape/css/mapBase.css
+++ b/shape/static/shape/css/mapBase.css
@@ -153,3 +153,11 @@
         visibility: hidden;
     }
 }
+
+#routeLegendControl {
+    opacity: 1;
+}
+
+#routeLegendControl table thead tr th, #routeLegendControl table tbody tr td {
+    padding: 0px 2px;
+}
