--- a/shape/templates/shape/mapBase.html
+++ b/shape/templates/shape/mapBase.html
@@ -49,6 +49,7 @@
 
     {% endwith %}
     <script src="{% static 'components/bootstrap-colorpicker/dist/js/bootstrap-colorpicker.min.js' %}"></script>
+    <script src="{% static "js/html2canvas.min.js" %}"></script>
     <script src="{% static "js/mapbox-gl.js" %}"></script>
     <script src='https://unpkg.com/@turf/turf@6/turf.min.js'></script>
     <script src="{% static 'trip/js/map.js' %}"></script>
