Add transactions by operator view

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -132,6 +132,7 @@
                         <li><a href=" {% url "postproducts:transfers" %} "> Transbordos por parada</a></li>
                         <li><a href=" {% url "postproducts:tripsBetweenZones" %} "> Viajes entre comunas</a></li>
                         <li><a href=" {% url "postproducts:boardingAndAlightingByZone" %} "> Subidas y bajadas</a></li>
+                        <li><a href=" {% url "postproducts:transactionsByOperator" %} "> Transacciones por operador</a></li>
                     </ul>
                 </li>
                 <li><a><i class="fas fa-bus-alt"></i> Perfil de carga <span
