--- a/shape/static/shape/css/mapBase.css
+++ b/shape/static/shape/css/mapBase.css
@@ -80,13 +80,17 @@
 #addRouteButton, #addStopButton{
     float: left;
 }
-#backToRouteControl{
+#backToRouteControl, #backToStopControl{
     float: right
 }
 
 .select2-selection--multiple {
     max-height: 60px;
     overflow: auto
+}
+
+.select2-container .select2-selection--single .select2-selection__rendered{
+    display: inline !important;
 }
 
 /* used for layer group control */
@@ -110,7 +114,7 @@
     display: block;
 }
 
-#listControl {
+#listControl, #stopListControl {
     padding: 0px;
 }
 
