--- a/trip/templates/trip/resume_indicators.html
+++ b/trip/templates/trip/resume_indicators.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="indicator-stat col-xl-3 col-lg-3 col-md-6 col-sm-6 col-xs-12 tile_stats_count">
-            <span class="count_top"><i class="fas fa-road"></i> Distancia Euclideana</span>
+            <span class="count_top"><i class="fas fa-road"></i> Distancia Euclidiana</span>
             <div class="count" id="indicator-dist-eucl-avg">- km</div>
             <span class="count_bottom">Mayor distancia <i class="red" id="indicator-dist-eucl-max">- km</i></span>
         </div>
