add gps offline view

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -98,6 +98,7 @@
                           class="fas fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a href="{% url 'awsbackup:gps' %}"> GPS</a></li>
+                      <li><a href="{% url 'awsbackup:gpsOffline' %}"> GPS Offline</a></li>
                       <li><a href="{% url 'awsbackup:trip' %}"> Viajes</a></li>
                       <li><a href="{% url 'awsbackup:opprogram' %}"> Prog. operación</a></li>
                       <li><a href="{% url 'awsbackup:representativeweek' %}"> Semanas rep.</a>
