add turfjs to local static storage

--- a/shape/templates/shape/mapBase.html
+++ b/shape/templates/shape/mapBase.html
@@ -46,7 +46,7 @@
     <script src="{% static 'components/bootstrap-colorpicker/dist/js/bootstrap-colorpicker.min.js' %}"></script>
     <script src="{% static "js/html2canvas.min.js" %}"></script>
     <script src="{% static "js/mapbox-gl.js" %}"></script>
-    <script src='https://unpkg.com/@turf/turf@6/turf.min.js'></script>
+    <script src="{% static "js/turf.min.js" %}"></script>
     <script src="{% static 'trip/js/map.js' %}"></script>
     <script src="{% static 'shape/js/mapApp.js' %}"></script>
 {% endblock %}
